tests/valid/Syntax_Valid_1.whiley


public export method test() -> void:
    debug ""
