tests/invalid/Void_Invalid_1.whiley
function f(void z) -> void:
